# ChallengesComputationalBiology

./: README.md
alignment/: CMakeLists.txt  affine.cpp  alignment.kdev4  bandedNW.cpp  globalNW.cpp  hirschberg.cpp  localSW.cpp  matrix.h  overlap.cpp
alignment/fasta/: affine.fasta  banded.fasta  diff.fasta  global.fasta  identical.fasta  local.fasta  long.fasta  overlap.fasta  verylong.fasta
alignment/personal/: dHdVNW.cpp  global.cpp
approxmatch/: CMakeLists.txt  approxmatch.kdev4  bandmatrix.h  main.cpp  suffixtree.cpp  suffixtree.h
suffixtree/: main.cpp  suffixtree.cpp  suffixtree.h  suffixtree.kdev4
